# ikea-api-client

./: .bandit.yaml  .bandit.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  auth.py  cart.py  config.ini  config.json  example.py  item.py  kvartiroteka.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  visual_search.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml  pre-commit-autoupdate.yml  pre-commit.yml  publish.yml  pypi_upload.yml  release.yml  test.yml
examples/: get_delivery_services.py
ikea_api/: __init__.py  api.py  auth.py  cart.py  constants.py  errors.py  item.py  order_capture.py  profile.py  utils.py
ikea_api/endpoints/: __init__.py  cart.py  order_capture.py  profile.py  purchases.py
ikea_api/endpoints/cart/: __init__.py  fragments.py  mutations.py  queries.py
ikea_api/endpoints/item/: __init__.py  item_ingka.py  item_iows.py  item_pip.py
ikea_api/endpoints/order_capture/: __init__.py
ikea_api/endpoints/purchases/: __init__.py  fragments.py  queries.py
ikea_api/misc/: item.py
response_examples/: update_response_examples.py
response_examples/cart/: add_items.json  clear.json  clear_coupon.json  delete_items.json  remove_items.json  show.json  update_items.json
response_examples/order_capture/: get_delivery_services.json
response_examples/profile/: purchase_info.json
response_examples/purchases/: purchase_history.json  purchase_info.json
src/ikea_api/: __init__.py  _api.py  _constants.py  _utils.py  abc.py  api.py  auth.py  base_ikea_api.py  constants.py  core.py  error_handlers.py  errors.py  exceptions.py  types.py  utils.py
src/ikea_api/_endpoints/: __init__.py  auth.py  cart.py  item_ingka.py  item_iows.py  item_pip.py  order_capture.py  purchases.py  search.py  stock_ingka.py
src/ikea_api/_endpoints/item/: __init__.py  item_ingka.py  item_iows.py  item_pip.py
src/ikea_api/_endpoints/search/: __init__.py
src/ikea_api/endpoints/: __init__.py  auth.py  cart.py  ingka_items.py  iows_items.py  order_capture.py  pip_item.py  purchases.py  rotera_item.py  search.py  stock.py  stock_ingka.py
src/ikea_api/endpoints/cart/: __init__.py  fragments.py  mutations.py  queries.py
src/ikea_api/endpoints/item/: __init__.py  item_ingka.py  item_iows.py  item_pip.py
src/ikea_api/endpoints/order_capture/: __init__.py
src/ikea_api/endpoints/purchases/: __init__.py  fragments.py  queries.py
src/ikea_api/endpoints/search/: __init__.py
src/ikea_api/executors/: httpx.py  requests.py
src/ikea_api/wrappers/: __init__.py  types.py  wrappers.py
src/ikea_api/wrappers/_parsers/: __init__.py  item_base.py  item_ingka.py  item_iows.py  item_pip.py  order_capture.py  purchases.py
src/ikea_api/wrappers/parsers/: ingka_items.py  iows_items.py  item_base.py  order_capture.py  pip_item.py  purchases.py
src/new/: __init__.py  abc.py  constants.py  core.py  error_handlers.py  exceptions.py  gen.py  main.py  test.py  utils.py
src/new/endpoints/: auth.py  cart.py  ingka_items.py  iows_items.py  item_ingka.py  item_iows.py  item_pip.py  order_capture.py  pip_item.py  purchases.py  search.py
src/new/executors/: __init__.py  httpx.py  requests.py
src/new/wrappers/: __init__.py  types.py  wrappers.py
src/new/wrappers/parsers/: __init__.py  ingka_items.py  iows_items.py  item_base.py  item_ingka.py  item_iows.py  item_pip.py  order_capture.py  pip_item.py  purchases.py  utils.py
tests/: conftest.py  test_abc.py  test_api.py  test_error_handlers.py  test_init.py  test_utils.py
tests/_endpoints/: test_cart.py  test_item_ingka.py  test_item_iows.py  test_item_pip.py  test_order_capture.py  test_purchases.py  test_search.py  test_stock_ingka.py
tests/data/item_ingka/: combination.json  default.json  no measurements.json  no media.json  no validDesign and no referenceMeasurements.json
tests/data/item_iows/: CatalogRef is not list.json  ImageUrl is dict, RetailItemCommChild is not list.json  combination.json  default.json  no CatalogRef.json  no RetailItemCommPackageMeasureList.json  no valid design text.json
tests/data/item_pip/: default.json  no catalogRefs.json
tests/data/order_capture/collect/: default_1.json  default_2.json  no pickUpPoints.json  no possibleDeliveryServices.json  no service.possibleDeliveries.deliveries.json  no timeWindows.earliestPossibleSlot.json  no timeWindows.json
tests/data/order_capture/home/: default_1.json  default_2.json  no possibleDeliveries.json  no service.possibleDeliveries.json  no_service.possibleDeliveries.deliveries.json
tests/data/purchases/: costs.json  history.json  status_banner.json
tests/endpoints/: test_auth.py  test_cart.py  test_ingka_items.py  test_iows_items.py  test_order_capture.py  test_pip_item.py  test_purchases.py  test_rotera_item.py  test_search.py  test_stock.py  test_stock_ingka.py
tests/executors/: test_httpx.py  test_requests.py
tests/new/: conftest.py  test_abc.py  test_utils.py
tests/new/endpoints/: test_auth.py  test_cart.py  test_ingka_items.py  test_iows_items.py  test_order_capture.py  test_pip_item.py  test_purchases.py  test_search.py
tests/new/wrappers/parsers/: test_item_base.py  test_item_ingka.py  test_item_iows.py  test_item_pip.py  test_order_capture.py  test_purchases.py  test_utils.py
tests/test_endpoints/: test_auth.py  test_cart.py  test_item_ingka.py  test_item_iows.py  test_item_pip.py
tests/wrappers/: test_init.py  test_wrappers.py
tests/wrappers/_parsers/: test_init.py  test_item_base.py  test_item_ingka.py  test_item_iows.py  test_item_pip.py  test_order_capture.py  test_purchases.py
tests/wrappers/parsers/: test_item_base.py  test_item_ingka.py  test_item_iows.py  test_item_pip.py  test_order_capture.py  test_purchases.py  test_utils.py
