[metadata]
name = ikea-api
version = attr: src.ikea_api.__version__
description = IKEA API Client
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = IKEA, IKEA API, API, API client
license = MIT
classifiers =
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
author = Lev Vereshchagin
author_email = mail@vrslev.com
url = https://github.com/vrslev/ikea-api-client

[options]
zip_safe = False
include_package_data = False
package_dir=
    =src
packages = find:
install_requires =
  aiohttp==3.7.4
  requests>=2.25.0
  pyppeteer==0.2.6

[options.packages.find]
where = src
