[metadata]
name = ikea_api
version = attr: src.ikea_api.__version__
description = IKEA API Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vrslev/ikea-api-client
author = Lev Vereshchagin
author_email = mail@vrslev.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = IKEA, IKEA API, API, API client

[options]
packages = find:
install_requires =
    aiohttp==3.7.4
    pyppeteer==0.2.6
    requests==2.26.0
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    black==21.8b0
    pre-commit==2.15.0

[options.package_data]
* = py.typed
